<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/home"
        android:id="@+id/buttonHome"
        app:showAsAction="ifRoom"
        android:enabled="true"

        android:icon="@drawable/ic_home1"/>
    <item android:id="@+id/buttonTask"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/h_w"
        android:icon="@drawable/test"/>
    <item android:id="@+id/buttonChat"
        android:title="@string/chat"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/chat"/>
    <item android:id="@+id/buttonHelp"
        android:title="@string/help"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/help"/>
    <item android:id="@+id/buttonReport"
        android:title="@string/report"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/report"/>



</menu>