<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <group android:checkableBehavior="none">
        <item android:title="@string/student_profile_menu"
            android:id="@+id/menu_student_profile"
            android:icon="@drawable/studentprofimg"

            />
                <item android:title="@string/change_password_menu"
                        android:id="@+id/menu_change_password"
                        android:icon="@drawable/changepasswordimg"
                        />
                <item android:title="@string/accounts_settings"
                        android:id="@+id/menu_settings"
                        android:icon="@drawable/setting" />
                <item android:title="@string/logout"
                    android:id="@+id/menu_logout"
                    android:icon="@drawable/logout"
                    />
        </group>



























</menu>