<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:id="@+id/toolbar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="10dp"
    app:cardCornerRadius="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/gradient_background_blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgMenuIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/mymenu1"
            android:visibility="gone"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />
        <ImageView
            android:id="@+id/imgIcLeftArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="gone"
            android:src="@drawable/ic_left_arrow"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />

        <ImageView
            android:id="@+id/imgLogoIcon"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="gone"
            android:src="@drawable/logo_white"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderMessage"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/message"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderNotification"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/notification"
            android:textColor="@color/white"
            android:visibility="gone"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderChangePwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/change_password"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderMyInstitute"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/my_institute"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderHelp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/help"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderAccountSettings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/account_settings"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderFees"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/fees"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderHoliday"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/holiday"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderStudentProfile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/student_profile"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderRoutine"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/routine"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderPaymentHistory"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/payment_history"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderPaymentMethod"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/payment_method"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderAttendance"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/attendance"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderTransport"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/transport"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderEventDetails"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/event_details"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/forgot_password"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <TextView
            android:id="@+id/textHeaderHolidayView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/holiday_view"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/segoe_ui"
            android:layout_centerInParent="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:gravity="center">


            <ImageView
                android:id="@+id/imgHeaderBellIcon"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:src="@drawable/bellicon"
                android:visibility="gone"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dashboardImgCircleDp"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/imgdp"
                android:visibility="gone"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.appcompat.widget.Toolbar>