<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_col"
    tools:context=".views.ChangePassword">

  <include layout="@layout/layout_toolbar"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_marginTop="90dp"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      >


    <EditText
        android:id="@+id/et_OldPwd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:shadowColor="@color/transparent"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="2"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:background="@drawable/changepassword_corneredittxt"
        android:padding="8dp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/et_NewPwd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:shadowColor="@color/transparent"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="2"
        android:hint="@string/enter_your_new_password"
        android:background="@drawable/changepassword_corneredittxt"
        android:inputType="textPassword"
        android:padding="8dp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/et_ConfirmNewPwd"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:shadowColor="@color/transparent"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="2"
        android:hint="@string/re_enter_your_new_password"
        android:inputType="textPassword"
        android:background="@drawable/changepassword_corneredittxt"
        android:padding="8dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/changePassword_Button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/corner_blue_button"
        android:shadowColor="@color/transparent"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="2"
        android:text="@string/confirm"
        android:textSize="20sp"
        android:textColor="@color/white"/>













  </LinearLayout>
    



</RelativeLayout>